# rd4

./: .gitignore  DESCRIPTION  INSTALL  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md
R/: d4source.R  extendr-wrappers.R
inst/extdata/: example.d4
man/: D4File.Rd  D4Source.Rd  D4SourceEnv.Rd  Histogram.Rd  HistogramEnv.Rd  Query.Rd  QueryEnv.Rd  QueryResult.Rd  QueryResultEnv.Rd  get_chroms.D4Source.Rd  get_chroms.Rd  get_source.D4Source.Rd  get_source.Rd  get_tracks.D4Source.Rd  get_tracks.Rd  import.Rd  mean.D4Source.Rd  median.D4Source.Rd  percentile.D4Source.Rd  percentile.Rd  print.D4Source.Rd  query.D4Source.Rd  query.Rd  resample.D4Source.Rd  resample.Rd  to_granges.Rd  update_mean.D4Source.Rd  update_mean.Rd  update_median.D4Source.Rd  update_median.Rd  update_percentile.D4Source.Rd  update_percentile.Rd  update_query_results.D4Source.Rd  update_query_results.Rd  update_with_mean.Rd  update_with_median.Rd  update_with_percentile.Rd  update_with_query_results.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/python/: pytest.py  requirements.txt
src/rust/: Cargo.toml  pytest.py
src/rust/src/: lib.rs
src/rust/src/d4_reader/: http_d4_reader.rs  local_d4_reader.rs  mod.rs
tests/: testthat.R
tests/testthat/: setup.R  test_d4_source.R  test_histogram.R  test_query_result.R  test_sanity.R
tests/testthat/testdata/: example1.bedgraph  example1.d4  example2.bedgraph  example_multitrack.d4  test.d4
vignettes/: basic_usage.Rmd
